--- a/files/experiment.css
+++ b/files/experiment.css
@@ -1,37 +1,33 @@
-
 #makeChoiceButton {
-    position:absolute;
-    top:400px;
-    left:700px;
-    width:200px;    
-    height:100px;  
+    position: absolute;
+    top: 400px;
+    left: 700px;
+    width: 200px;
+    height: 100px;
     text-align: center;
     line-height: 100px;
-    background-color:rgba(255,0,0,.11);
+    background-color: rgba(255, 0, 0, .11);
 }
 
-
-#matchText{
-    color:black;
-    position:absolute;
-    top:200px;
-    left:600px;
-    width:400px;    
-    height:100px;  
-    text-align: center;
-    line-height: 100px;
-    font-size: 150%;
-}
-
-#numberClicks{
-    position:absolute;
-    top:700px;
-    left:600px;
-    width:400px;    
-    height:100px;  
+#matchText {
+    color: black;
+    position: absolute;
+    top: 200px;
+    left: 600px;
+    width: 400px;
+    height: 100px;
     text-align: center;
     line-height: 100px;
     font-size: 150%;
 }
 
-
+#numberClicks {
+    position: absolute;
+    top: 700px;
+    left: 600px;
+    width: 400px;
+    height: 100px;
+    text-align: center;
+    line-height: 100px;
+    font-size: 150%;
+}
